syntax = "proto3";

package cnspec.upstream.v1;
option go_package = "go.mondoo.com/cnspec/upstream";

import "policy/cnspec_policy.proto";

service Reporting {
  rpc StoreReport(cnspec.policy.v1.ReportCollection) returns (ReportID) {}
}


message ReportID {
  string id = 1;
}

